# xbyak_aarch64

./: .gitignore  .gitlab-ci.yml  .travis.yml  CCLA.txt  CMakeLists.txt  ICLA.txt  Jenkinsfile  Makefile  README.md  _clang-format  update_version.sh
.github/actions/test_action/: Dockerfile  action.yaml  entrypoint.sh  make_nm.cpp  make_nm_sve.cpp  nm_frame.cpp  test_all.sh  test_nm.native.sh  test_nm.sh  test_nm.sh~  xbyak_aarch64.h  xbyak_aarch64_adr.h  xbyak_aarch64_err.h  xbyak_aarch64_inner.h  xbyak_aarch64_mnemonic.h
.github/automation/: clang-format.sh
.github/automation/env/: qemu.sh  setenv  setenv-fcc  setenv-gcc  setenv-qemu
.github/workflows/: main.yml  main.yml~
sample/: CMakeLists.txt  Makefile  add.cpp  add2.cpp  bf.cpp  cpuinfo.FX700.a64fx.centOS.8_3.txt  cpuinfo.JetsonNano.Cortex-A57.ubuntu.18_04.txt  cpuinfo.Mac_mini.M1.macOS.13_5_2.txt  cpuinfo.WindowsDevKit2023.Snapdragon_8cx_Gen3.windows.11.txt  cpuinfo.c7g_medium.Graviton3.ubuntu.22_04.txt  cpuinfo.cpp  direct_write.cpp  dump.cpp  label.cpp  perf.cpp
sample/mnemonic_syntax/: nm.make_nm.cpp  nm.make_nm_branch.cpp  nm.make_nm_fp.cpp  nm.make_nm_load_store.cpp  nm.make_nm_simd.cpp  nm.make_nm_simd_fp_load_store.cpp  nm.make_nm_sve.cpp  nm.make_nm_sve_addr.cpp  readme.txt
src/: err_impl.h  low_func.s  util_impl.cpp  util_impl.h  util_impl_linux.h  util_impl_mac.h  util_impl_windows.h  xbyak_aarch64_impl.cpp  xbyak_aarch64_impl.h  xbyak_aarch64_mnemonic.h
test/: CMakeLists.txt  Makefile  add_sub_adds_subs_imm.cpp  make_nm.cpp  make_nm_branch.cpp  make_nm_fp.cpp  make_nm_load_store.cpp  make_nm_simd.cpp  make_nm_simd_fp_load_store.cpp  make_nm_sve.cpp  make_nm_sve_addr.cpp  meta_mnemonic.cpp  misc.cpp  mov.cpp  mov_imm.cpp  nm_frame.cpp  reg_manager_tests.cpp  test_all.sh  test_integrated.sh  test_nm.native.sh  test_nm.sh  test_reg_manager.sh  workaround.hpp
test2/: gen_test.rb  gen_test_ptn.sh  inst.sh  nm_frame.cpp  test.sh  test_all.sh
test2/instructions/a/: adclb_z_zzz.test  adclt_z_zzz.test  addha.test  addhnb_z_zz.test  addhnt_z_zz.test  addp_z_p_zz.test  addspl.test  addsvl.test  addva.test  aesd_z_zz.test  aese_z_zz.test  aesimc_z_z.test  aesmc_z_z.test  asr_z_p_zi.test  asrd_z_p_zi.test
test2/instructions/b/: bcax_z_zzz.test  bdep_z_zz.test  bext_z_zz.test  bfcvt_float.test  bfcvt_z_p_z.test  bfcvtn_advsimd.test  bfcvtnt_z_p_z.test  bfdot_z_zzz.test  bfdot_z_zzzi.test  bfmlalb_z_zzz.test  bfmlalb_z_zzzi.test  bfmlalt_z_zzz.test  bfmlalt_z_zzzi.test  bfmmla_z_zzz.test  bfmopa.test  bfmops.test  bgrp_z_zz.test  bsl1n_z_zzz.test  bsl2n_z_zzz.test  bsl_z_zzz.test
test2/instructions/c/: cadd_z_zz.test  cas.test  casb.test  cash.test  casp.test  cdot_z_zzz.test  cdot_z_zzzi.test  cmla_z_zzz.test  cmla_z_zzzi.test
test2/instructions/e/: eor3_z_zzz.test  eorbt_z_zz.test  eortb_z_zz.test
test2/instructions/f/: faddp_z_p_zz.test  fcpy_z_p_i.test  fcvtlt_z_p_z.test  fcvtnt_z_p_z.test  fcvtx_z_p_z.test  fcvtxnt_z_p_z.test  flogb_z_p_z.test  fmaxnmp_z_p_zz.test  fmaxp_z_p_zz.test  fminnmp_z_p_zz.test  fminp_z_p_zz.test  fmlalb_z_zzz.test  fmlalb_z_zzzi.test  fmlalt_z_zzz.test  fmlalt_z_zzzi.test  fmlslb_z_zzz.test  fmlslb_z_zzzi.test  fmlslt_z_zzz.test  fmlslt_z_zzzi.test  fmmla_z_zzz.test  fmopa.test  fmops.test
test2/instructions/h/: histcnt_z_p_zz.test  histseg_z_zz.test
test2/instructions/l/: ld1b.test  ld1d.test  ld1h.test  ld1q.test  ld1w.test  ld64b.test  ldadd.test  ldaddb.test  ldaddh.test  ldclr.test  ldclrb.test  ldclrh.test  ldeor.test  ldeorb.test  ldeorh.test  ldnt1b_z_p_ar.test  ldnt1d_z_p_ar.test  ldnt1h_z_p_ar.test  ldnt1sb_z_p_ar.test  ldnt1sh_z_p_ar.test  ldnt1sw_z_p_ar.test  ldnt1w_z_p_ar.test  ldr.test  ldset.test  ldsetb.test  ldseth.test  ldsmax.test  ldsmaxb.test  ldsmaxh.test  ldsmin.test  ldumax.test  ldumaxb.test  ldumaxh.test  ldumin.test  lduminb.test  lduminh.test  lsl_z_p_zi.test  lsr_z_p_zi.test
test2/instructions/m/: match_p_p_zz.test  mla_z_zzzi.test  mls_z_zzzi.test  mov.test  mul_z_zz.test  mul_z_zzi.test
test2/instructions/n/: nbsl_z_zzz.test  nmatch_p_p_zz.test
test2/instructions/p/: pmul_z_zz.test  pmullb_z_zz.test  pmullt_z_zz.test
test2/instructions/r/: raddhnb_z_zz.test  raddhnt_z_zz.test  rax1_z_zz.test  rdsvl.test  rshrnb_z_zi.test  rshrnt_z_zi.test  rsubhnb_z_zz.test  rsubhnt_z_zz.test
test2/instructions/s/: saba_z_zzz.test  sabalb_z_zzz.test  sabalt_z_zzz.test  sabdlb_z_zz.test  sabdlt_z_zz.test  sadalp_z_p_z.test  saddlb_z_zz.test  saddlbt_z_zz.test  saddlt_z_zz.test  saddwb_z_zz.test  saddwt_z_zz.test  sbclb_z_zzz.test  sbclt_z_zzz.test  sdot_z_zzz.test  sdot_z_zzzi.test  shadd_z_p_zz.test  (+136 more)
test2/neg_cpp/: empty.cpp  instructions_a.cpp  instructions_b.cpp  instructions_f.cpp  instructions_l.cpp  instructions_m.cpp  instructions_r.cpp  instructions_s.cpp  instructions_u.cpp
test2/test_ptn_asm/: instructions_a.asm  instructions_b.asm  instructions_c.asm  instructions_e.asm  instructions_f.asm  instructions_h.asm  instructions_l.asm  instructions_m.asm  instructions_n.asm  instructions_p.asm  instructions_r.asm  instructions_s.asm  instructions_t.asm  instructions_u.asm  instructions_w.asm  instructions_x.asm  instructions_z.asm
test2/test_ptn_cpp/: _clang-format  instructions_a.cpp  instructions_b.cpp  instructions_c.cpp  instructions_e.cpp  instructions_f.cpp  instructions_h.cpp  instructions_l.cpp  instructions_m.cpp  instructions_n.cpp  instructions_p.cpp  instructions_r.cpp  instructions_s.cpp  instructions_t.cpp  instructions_u.cpp  instructions_w.cpp  instructions_x.cpp  instructions_z.cpp
utility/: dissasemble.sh  format.sh  gen_mnemonic.rb  make_alias_branch.py  make_reg_class.py  mnemonic_def_tail.h  mnemonic_tail.h  reorder_endian.awk
xbyak_aarch64/: low_func.h  xbyak_aarch64.h  xbyak_aarch64_adr.h  xbyak_aarch64_code_array.h  xbyak_aarch64_err.h  xbyak_aarch64_gen.h  xbyak_aarch64_impl.h  xbyak_aarch64_inner.h  xbyak_aarch64_label.h  xbyak_aarch64_meta_mnemonic.h  xbyak_aarch64_mnemonic.h  xbyak_aarch64_mnemonic_def.h  xbyak_aarch64_reg.h  xbyak_aarch64_reg_manager.h  xbyak_aarch64_util.h  xbyak_aarch64_version.h
(+86 files in other folders)
